--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ osx_image: xcode7.3.1
 rvm: 2.2.2
 before_install:
     - gem install cocoapods -v '1.0.1' 
-    - pod setup
+    - pod setup > /dev/null    #/dev/null to prevent long logs
     - brew update
     - brew outdated xctool || brew upgrade xctool
 #    - git clone https://github.com/facebook/xctool.git #use this if current xctool is outdated
